# electronic

./: .gitignore  README.md
pico-projects/5110_lcd/: 5110_lcd.c  CMakeLists.txt  pcd8544_lcd.h
pico-projects/5110_lcd/lcd-lib/: pcd8544_lcd.h
pico-projects/i2c-test/: CMakeLists.txt  Makefile  i2c-test.c
pico-projects/lcd-demo/: CMakeLists.txt
pico-projects/lcd-demo/lcd-lib/: lcd-lib.c  lcd-lib.h
pico-projects/lcd-demo/src/: main.c
raspberry-pi-pico/: Makefile  README.md
serial-ports/: #Makefile#  Cargo.toml  Makefile  bugfix.patch
serial-ports/src/: main.rs
